veloq-runtime/tests/ui/local_scope_not_send_sync.stderr
error[E0277]: `Rc<()>` cannot be sent between threads safely
 --> tests/ui/local_scope_not_send_sync.rs:8:19
  |
8 |     assert_send::<LocalStorage>();
  |                   ^^^^^^^^^^^^ `Rc<()>` cannot be sent between threads safely
  |
  = help: within `LocalStorage`, the trait `std::marker::Send` is not implemented for `Rc<()>`
note: required because it appears within the type `PhantomData<Rc<()>>`
 --> $RUST/core/src/marker.rs
  |
  | pub struct PhantomData<T: PointeeSized>;
  |            ^^^^^^^^^^^
note: required because it appears within the type `LocalStorage`
 --> src/utils/storage.rs
  |
  | pub struct LocalStorage(std::marker::PhantomData<std::rc::Rc<()>>);
  |            ^^^^^^^^^^^^
note: required by a bound in `assert_send`
 --> tests/ui/local_scope_not_send_sync.rs:4:19
  |
4 | fn assert_send<T: Send>() {}
  |                   ^^^^ required by this bound in `assert_send`

error[E0277]: `Rc<()>` cannot be shared between threads safely
 --> tests/ui/local_scope_not_send_sync.rs:9:19
  |
9 |     assert_sync::<LocalStorage>();
  |                   ^^^^^^^^^^^^ `Rc<()>` cannot be shared between threads safely
  |
  = help: within `LocalStorage`, the trait `Sync` is not implemented for `Rc<()>`
note: required because it appears within the type `PhantomData<Rc<()>>`
 --> $RUST/core/src/marker.rs
  |
  | pub struct PhantomData<T: PointeeSized>;
  |            ^^^^^^^^^^^
note: required because it appears within the type `LocalStorage`
 --> src/utils/storage.rs
  |
  | pub struct LocalStorage(std::marker::PhantomData<std::rc::Rc<()>>);
  |            ^^^^^^^^^^^^
note: required by a bound in `assert_sync`
 --> tests/ui/local_scope_not_send_sync.rs:5:19
  |
5 | fn assert_sync<T: Sync>() {}
  |                   ^^^^ required by this bound in `assert_sync`

error[E0277]: `Cell<usize>` cannot be shared between threads safely
  --> tests/ui/local_scope_not_send_sync.rs:11:19
   |
11 |     assert_sync::<NonAtomicUsize>();
   |                   ^^^^^^^^^^^^^^ `Cell<usize>` cannot be shared between threads safely
   |
   = help: within `NonAtomicUsize`, the trait `Sync` is not implemented for `Cell<usize>`
   = note: if you want to do aliasing and mutation between multiple threads, use `std::sync::RwLock` or `std::sync::atomic::AtomicUsize` instead
note: required because it appears within the type `NonAtomicUsize`
  --> src/utils/storage.rs
   |
   | pub struct NonAtomicUsize(Cell<usize>);
   |            ^^^^^^^^^^^^^^
note: required by a bound in `assert_sync`
  --> tests/ui/local_scope_not_send_sync.rs:5:19
   |
 5 | fn assert_sync<T: Sync>() {}
   |                   ^^^^ required by this bound in `assert_sync`

error[E0277]: the trait bound `LocalStorage: ThreadSafeStorage` is not satisfied
  --> tests/ui/local_scope_not_send_sync.rs:12:19
   |
12 |     assert_send::<ScopeRef<LocalStorage>>();
   |                   ^^^^^^^^^^^^^^^^^^^^^^ the trait `ThreadSafeStorage` is not implemented for `LocalStorage`
   |
help: the trait `ThreadSafeStorage` is implemented for `AtomicStorage`
  --> src/utils/storage.rs
   |
   | impl ThreadSafeStorage for AtomicStorage {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: required for `ScopeRef<LocalStorage>` to implement `std::marker::Send`
note: required by a bound in `assert_send`
  --> tests/ui/local_scope_not_send_sync.rs:4:19
   |
 4 | fn assert_send<T: Send>() {}
   |                   ^^^^ required by this bound in `assert_send`

error[E0277]: the trait bound `LocalStorage: ThreadSafeStorage` is not satisfied
  --> tests/ui/local_scope_not_send_sync.rs:13:19
   |
13 |     assert_sync::<ScopeRef<LocalStorage>>();
   |                   ^^^^^^^^^^^^^^^^^^^^^^ the trait `ThreadSafeStorage` is not implemented for `LocalStorage`
   |
help: the trait `ThreadSafeStorage` is implemented for `AtomicStorage`
  --> src/utils/storage.rs
   |
   | impl ThreadSafeStorage for AtomicStorage {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: required for `ScopeRef<LocalStorage>` to implement `Sync`
note: required by a bound in `assert_sync`
  --> tests/ui/local_scope_not_send_sync.rs:5:19
   |
 5 | fn assert_sync<T: Sync>() {}
   |                   ^^^^ required by this bound in `assert_sync`

error[E0277]: the trait bound `LocalStorage: ThreadSafeStorage` is not satisfied
  --> tests/ui/local_scope_not_send_sync.rs:14:19
   |
14 |     assert_send::<AnyScopeRef>();
   |                   ^^^^^^^^^^^ the trait `ThreadSafeStorage` is not implemented for `LocalStorage`
   |
help: the trait `ThreadSafeStorage` is implemented for `AtomicStorage`
  --> src/utils/storage.rs
   |
   | impl ThreadSafeStorage for AtomicStorage {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: required for `ScopeRef<LocalStorage>` to implement `std::marker::Send`
note: required because it appears within the type `AnyScopeRef`
  --> src/task/scope.rs
   |
   | pub enum AnyScopeRef {
   |          ^^^^^^^^^^^
note: required by a bound in `assert_send`
  --> tests/ui/local_scope_not_send_sync.rs:4:19
   |
 4 | fn assert_send<T: Send>() {}
   |                   ^^^^ required by this bound in `assert_send`

error[E0277]: the trait bound `LocalStorage: ThreadSafeStorage` is not satisfied
  --> tests/ui/local_scope_not_send_sync.rs:15:19
   |
15 |     assert_sync::<AnyScopeRef>();
   |                   ^^^^^^^^^^^ the trait `ThreadSafeStorage` is not implemented for `LocalStorage`
   |
help: the trait `ThreadSafeStorage` is implemented for `AtomicStorage`
  --> src/utils/storage.rs
   |
   | impl ThreadSafeStorage for AtomicStorage {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: required for `ScopeRef<LocalStorage>` to implement `Sync`
note: required because it appears within the type `AnyScopeRef`
  --> src/task/scope.rs
   |
   | pub enum AnyScopeRef {
   |          ^^^^^^^^^^^
note: required by a bound in `assert_sync`
  --> tests/ui/local_scope_not_send_sync.rs:5:19
   |
 5 | fn assert_sync<T: Sync>() {}
   |                   ^^^^ required by this bound in `assert_sync`
